<resources>
    <string name="settings_category_display">Display</string>
    <string name="settings_category_sound">Sound</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_locale">Locale</string>
    <string name="settings_category_theme">Theme</string>
    <string name="settings_category_notification">Notification</string>
    <string name="settings_category_notification_custom">Custom Notification</string>
    <string name="settings_category_notification_override">Override Notification</string>
    <string name="settings_category_defaults">Defaults</string>
    <string name="settings_category_random">Randomness</string>
    <string name="settings_category_widget">Widget</string>
    <string name="setting_immersive_enable_primary">Immersive Mode</string>
    <string name="setting_sound_enable_primary">Sound Effects</string>
    <string name="setting_music_enable_primary">Music</string>
    <string name="setting_language_picker_primary">Language</string>
    <string name="setting_ringtone_picker_enable_primary">Custom Ringtone Picker</string>
    <string name="setting_theme_picker_primary">App Theme</string>
    <string name="setting_accent_color_primary">Accent Color</string>
    <string name="setting_primary_color_primary">Primary Color</string>
    <string name="setting_toolbar_text_color_primary">Toolbar Text Color</string>
    <string name="setting_game_text_color_primary">Game Text Color</string>
    <string name="setting_notification_click_action_primary">Click action</string>
    <string name="setting_notification_custom_primary">Enable</string>
    <string name="setting_notification_button_style_primary">Button Style</string>
    <string name="setting_notification_ongoing_primary">Ongoing Notification</string>
    <string name="setting_notification_ongoing_secondary">Ongoing notifications are not supported on SmartWatches</string>
    <string name="setting_notification_theme_primary">Background</string>
    <string name="setting_notification_theme_text_primary">Text Color</string>
    <string name="setting_first_day_of_week_primary">First Day of the Week</string>
    <string name="setting_force_advanced_primary">Always Show Advanced Options</string>
    <string name="setting_force_advanced_secondary">Disable to show advanced options on a per reminder basis</string>
    <string name="setting_notification_swipe_away_action_primary">Swipe Action</string>
    <string name="setting_notification_click_open_primary">Click Opens App</string>
    <string name="setting_notification_swipe_away_open_primary">Swipe Opens App</string>
    <string name="setting_random_amount_primary">Random</string>
    <string name="setting_less_random_amount_primary">Less Random</string>
    <string name="setting_even_amount_primary">Even</string>
    <string name="setting_widget_theme_primary">Theme</string>
    <string name="setting_widget_text_color_primary">Text Color</string>
    <string name="setting_override_vibrate_primary">Override notification vibrate</string>
    <string name="setting_override_ringtone_primary">Override notification tone playback</string>
    <string name="setting_override_ringtone_secondary">This must be enabled to override the audio stream</string>
    <string name="setting_override_ringtone_stream_primary">Override notification audio stream</string>
    <string name="setting_override_speech_stream_primary">Override speech stream</string>
    <string name="time_millisecond">Millisecond</string>
    <string name="time_milliseconds">Milliseconds</string>
    <string name="time_millisecond_abrev">ms</string>
    <string name="time_second">Second</string>
    <string name="time_seconds">Seconds</string>
    <string name="time_second_abrev">s</string>
    <string name="time_minute">Minute</string>
    <string name="time_minutes">Minutes</string>
    <string name="time_hour">Hour</string>
    <string name="time_hours">Hours</string>
    <string name="time_day">Day</string>
    <string name="time_days">Days</string>
    <string name="time_daily">Daily</string>
    <string name="time_week">Week</string>
    <string name="time_weeks">Weeks</string>
    <string name="time_weekly">Weekly</string>
    <string name="time_month">Month</string>
    <string name="time_months">Months</string>
    <string name="time_monthly">Monthly</string>
    <string name="time_year">Year</string>
    <string name="time_years">Years</string>
    <string name="time_yearly">Yearly</string>
    <string name="meter">Meter</string>
    <string name="meters">Meters</string>
    <string name="num_one">One</string>
    <string name="num_two">Two</string>
    <string name="num_three">Three</string>
    <string name="num_four">Four</string>
    <string name="num_five">Five</string>
    <string name="num_six">Six</string>
    <string name="num_seven">Seven</string>
    <string name="num_eight">Eight</string>
    <string name="num_nine">Nine</string>
    <string name="num_ten">Ten</string>
    <string name="num_first">First</string>
    <string name="num_second">Second</string>
    <string name="num_third">Third</string>
    <string name="num_fourth">Fourth</string>
    <string name="num_fifth">Fifth</string>
    <string name="num_sixth">Sixth</string>
    <string name="num_seventh">Seventh</string>
    <string name="num_eighth">Eighth</string>
    <string name="num_ninth">Ninth</string>
    <string name="num_tenth">Tenth</string>
    <string name="day_sunday">Sunday</string>
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="days_of_week">Days of Week</string>
    <string name="days_of_month">Days of Month</string>
    <string name="days_of_year">Days of Year</string>
    <string name="weeks_of_month">Weeks of Month</string>
    <string name="weeks_of_year">Weeks of Year</string>
    <string name="months_of_year">Months of Year</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="pattern_1">Pattern 1</string>
    <string name="pattern_2">Pattern 2</string>
    <string name="pattern_3">Pattern 3</string>
    <string name="pattern_4">Pattern 4</string>
    <string name="pattern_5">Pattern 5</string>
    <string name="pattern_6">Pattern 6</string>
    <string name="select">Select</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>
    <string name="diff_difficulty">Difficulty</string>
    <string name="diff_select_difficulty">Select Difficulty</string>
    <string name="diff_easy">Easy</string>
    <string name="diff_normal">Normal</string>
    <string name="diff_hard">Hard</string>
    <string name="enable">Enable</string>
    <string name="enabled">Enabled</string>
    <string name="disable">Disable</string>
    <string name="disabled">Disabled</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="opened">Opened</string>
    <string name="closed">Closed</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="shown">Shown</string>
    <string name="Hidden">Hidden</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="clear">Clear</string>
    <string name="clear_log">Clear Log</string>
    <string name="log_cleared">Log cleared</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>
    <string name="some">Some</string>
    <string name="none">None</string>
    <string name="all">All</string>
    <string name="set">Set</string>
    <string name="unset">Unset</string>
    <string name="last">Last</string>
    <string name="first">First</string>
    <string name="every">Every</string>
    <string name="other">Other</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="clear_reminder_log_prompt_title">Clear Reminder Log</string>
    <string name="clear_reminder_log_prompt_content">Are you sure you want to clear the reminder log?</string>
    <string name="delete_reminder_prompt_title">Delete Reminder</string>
    <string name="delete_reminder_prompt_content">Are you sure you want to delete this reminder?</string>
    <string name="delete_custom_icon_prompt_title">Delete Icon</string>
    <string name="delete_custom_icon_prompt_content">Are you sure you want to delete this icon?</string>
    <string name="cancel_reminder_prompt_title">Discard Changes</string>
    <string name="cancel_reminder_prompt_content">Are you sure you want to discard your changes?</string>
    <string name="delete_vibrate_pattern_prompt_title">Delete Vibrate Pattern</string>
    <string name="delete_vibrate_pattern_prompt_content">Are you sure you want to delete this vibrate pattern?</string>
    <string name="delete_location_prompt_title">Delete Location</string>
    <string name="delete_location_prompt_content">Are you sure you want to delete this location?</string>
    <string name="duplicate_reminder_prompt_title">Duplicate Reminder</string>
    <string name="duplicate_reminder_prompt_content">Are you sure you want to duplicate this reminder?</string>
    <string name="include_log_prompt_title">Include Log</string>
    <string name="include_log_prompt_content">Do you want to include the reminder log?</string>
    <string name="include_default_reminder_prompt_title">Include Default Reminder</string>
    <string name="include_default_reminder_prompt_content">Do you want to include the default reminder?</string>
    <string name="start_new_game_title">Start New Game</string>
    <string name="start_new_game_prompt">Are you sure you want to start a new game?</string>
    <string name="end_game_title">End Game</string>
    <string name="end_game_prompt">Are you sure you want to end this game?</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="help_and_feedback">Help &amp; Feedback</string>
    <string name="rate_app">Rate App</string>
    <string name="more_apps">More Apps</string>
    <string name="tutorial">Tutorial</string>
    <string name="read">Read</string>
    <string name="watch">Watch</string>
    <string name="link">Link</string>
    <string name="links">Links</string>
    <string name="licenses">Licenses</string>
    <string name="help_translate">Help Translate</string>
    <string name="get_the_beta">Get the Beta</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="high_scores">High Scores</string>
    <string name="my_circles">My Circles</string>
    <string name="invitations">Invitations</string>
    <string name="options">Options</string>
    <string name="game_options">Game Options</string>
    <string name="upgrade_to_pro">Upgrade to Pro</string>
    <string name="add_item">Add Item</string>
    <string name="release_notes">Release Notes</string>
    <string name="home">Home</string>
</resources>