<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:orientation="horizontal"
    android:padding="8dp">

    <Button
        android:id="@+id/btn_neutral"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical|left"
        android:minWidth="64dp"
        android:text="@string/add_item"
        android:textColor="?attr/colorAccentText"
        android:textSize="@dimen/item_small_size" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:layout_toLeftOf="@+id/btn_ok"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:minWidth="64dp"
        android:text="@string/cancel"
        android:textColor="?attr/colorAccentText"
        android:textSize="@dimen/item_small_size" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:minWidth="64dp"
        android:text="@string/okay"
        android:textColor="?attr/colorAccentText"
        android:textSize="@dimen/item_small_size" />

</RelativeLayout>